chore: integrate lsp [ROAD-691]